made header smaller on mobile, fixed layout on expertise mobile

--- a/src/app/component/first-home-page/first-home-page.component.css
+++ b/src/app/component/first-home-page/first-home-page.component.css
@@ -91,6 +91,10 @@
 }
 
 @media screen and (max-width: 992px) {
+    .homeSquares {
+        height: calc(100vh - 56px) !important;
+    }
+
     .homeSquaresDescriptionText {
         width: calc(100% - 100px) !important;
         /* update the calc pixels with the padding of the element*/
